-- updated release workflow

--- a/docs/release-notes/v3.0.0.md
+++ b/docs/release-notes/v3.0.0.md
@@ -1,4 +1,5 @@
-# mizban v3 is out ! - faster than ever now written in go 
+# Mizban v3 is Here — Faster Than Ever, Now Rewritten in Go
+
 
 ## What is new in v3.0.0
 
